# chunk_codes

./: README.md  checkers_game.7z
InteractiveCMD/: README.md
InteractiveCMD/src/: InterActiveForm.cs  Makefile  Program.cs  ThreadMain.cs
ReversePortForward/: README.md
ReversePortForward/src/CSPortForward/: ForwardState.cs  Makefile  Program.cs  TcpForwardSlim.cs
ReversePortForward/src/CSPortListen/: ListenState.cs  MainForm.Designer.cs  MainForm.cs  Makefile  Program.cs  TcpListenSlim.cs
Sudoku-Calculator/: README.md  express.js  index.html  main.js
ai_rubik_cubes/: Makefile  Readme.md
ai_rubik_cubes/src/: main.py
checkers_game/: CMakeLists.txt  README.md
checkers_game/assets/: background.ai  background.eps
checkers_game/include/: assets.hpp  circles.hpp  constants.hpp  dialog.hpp  log.hpp  mouse.hpp  score_board.hpp  sound.hpp
checkers_game/src/: assets.cpp  circles.cpp  dialog.cpp  log.cpp  main.cpp  mouse.cpp  score_board.cpp  sound.cpp
units_to_json/: README.md
units_to_json/resources/: all_units.json
